objects/GEMS_SA_BA_Association__c.object
<CustomObject>
    <description>Junction object between Shared Accums and Benefit Agreement</description>
    <fields>
        <fullName>BAGroupNum__c</fullName>
        <label>BAGroupNum</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <label>Benefit Agreement</label>
        <referenceTo>GEMS_Benefit_Agreement__c</referenceTo>
        <relationshipLabel>SA BA Associations</relationshipLabel>
        <relationshipName>SA_BA_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shared_Accums__c</fullName>
        <label>Shared Accums</label>
        <referenceTo>GEMS_Shared_Accums__c</referenceTo>
        <relationshipLabel>SA BA Associations</relationshipLabel>
        <relationshipName>SharedAcc_BA_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>GEMS SA BA Association</label>
    <nameField>
        <displayFormat>SABA-{0000}</displayFormat>
        <label>SA BA Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS SA BA Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>